update log4j version + use splittable random (it is thread safe)